new button docs Update index.html
Tentativa de criar um botão para retornar ao topo.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                 Load More
             </button>
         </div>
+        <div class="pagination">
+            <button onclick="backToTheTop()">
+                Back to the top
+            </button>
+        </div>
     </section>
 
     <!-- Nosso JS -->
