--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,27 +20,74 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/modal-info.css">
 
+</head>
 <body>
+
+    <div id="info-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-modal-btn">&times</span>
+            <div id="content-info"></div>
+        </div>
+    </div>
+
     <section class="content">
         <h1>Pokedex</h1>
-
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+        <ol id="pokemons-list" class="pokemons"></ol>
 
         <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
+            <button id="morePokemon" type="button">Load More</button>
         </div>
     </section>
 
-    <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/pokemonModel.js"></script>
+    <script src="/assets/js/pokeFetch.js"></script>
     <script src="/assets/js/main.js"></script>
-</body>
 
+    <!-- <script>
+        const pokemons = document.querySelectorAll('.pokemon')
+
+        pokemons.forEach(function (pokemon) {
+            pokemon.addEventListener('click', function(){
+                const idPokemon = event.target.id
+                console.log(idPokemon)
+            })
+        })
+
+    </script> -->
+
+    <!-- <script>
+        const pokemonNumberRef = document.getElementById('number-ref').innerHTML
+        const modalRef = document.getElementById('info-modal')
+        const btnRef = document.getElementById('open-modal-info')
+        const closeRef = document.getElementById('close-modal-btn')
+        const infoRef = document.getElementById('content-info')
+
+        btnRef.onclick = function () {
+            console.log(pokemonNumberRef)
+            fetch('https://pokeapi.co/api/v2/pokemon/1/')
+            .then(res => res.json())
+            .then(result => {
+                infoRef.innerHTML = `<span>${result.name}</span>`
+                modalRef.style.display = 'block'
+            })
+            .catch(err => {
+                console.log(err)
+            })
+
+        }
+
+        closeRef.onclick = function () {
+            modalRef.style.display = 'none'
+        }
+
+        window.onclick = function (event) {
+            if (event.target == modalRef) {
+                modalRef.style.display = 'none'
+            }
+        }
+    </script> -->
+
+</body>
 </html>
