--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
+    <link rel="stylesheet" href="https://matheuschimendes.github.io/js-developer-pokedex/assets/css/global.css">
+    
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
