--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="https://matheuschimendes.github.io/js-developer-pokedex/assets/css/global.css">
+    <link rel="stylesheet" href="https://matheuschimendes.github.io/js-developer-pokedex/assets/css/pokedex.css">
     
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
