--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     </section>
 
     <!-- Nosso JS -->
+    <script src="https://matheuschimendes.github.io/js-developer-pokedex/assets/js/pokemon-model.js"></script>
+    <script src="https://matheuschimendes.github.io/js-developer-pokedex/assets/js/poke-api.js"></script>
+    <script src="https://matheuschimendes.github.io/js-developer-pokedex/assets/js/main.js"></script>
+
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
