--- a/index.html
+++ b/index.html
@@ -1,46 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
 
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Font Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/global.css" />
+    <link rel="stylesheet" href="/assets/css/pokedex.css" />
+    <link rel="stylesheet" href="/assets/css/modal.css" />
+  </head>
 
-<body>
+  <body>
+  
     <section class="content">
-        <h1>Pokedex</h1>
+      <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
-
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
+      <ol id="pokemonList" class="pokemons">
+        <!-- ..... Pokemons here ..... -->
+      </ol>
+      <div class="pagination">
+        <button id="loadMoreButton" type="button">Load More</button>
+      </div>
     </section>
-
+    <div class="background__layer"></div>
+    <div class="modal">
+      <button class="close__button"></button>
+      <img class="modalImage" src="" alt="" />
+      <h1 class="modalTitle"></h1>
+      <nav>
+        <ul class="nav__list">
+          <li>
+            <p>Height</p>
+            <span class="pokemon__height"></span>
+          </li>
+          <span class="gray__line"></span>
+          <li>
+            <p>Weight</p>
+            <span class="pokemon__weight"></span>
+          </li>
+          <span class="gray__line"></span>
+          <li>
+            <p class="pokemon__move_description">Most used abillity</p>
+            <span class="pokemon__move"></span>
+          </li>
+        </ul>
+      </nav>
+      <div class="info">
+        <ul class="info__stats">
+            <li class="info__stats-item">
+                <p>HP</p>
+                <progress class="stats__hp" max="100" value="70"></progress>
+            </li>
+            <li class="info__stats-item">
+                <p>ATK</p>
+                <progress class="stats__atk" max="100" value="70"></progress>
+            </li>
+            <li class="info__stats-item">
+                <p>DEF</p>
+                <progress class="stats__def" max="100" value="70"></progress>
+            </li>
+            <li class="info__stats-item">
+                <p>Special ATK</p>
+                <progress class="stats__specialAtk" max="100" value="70"></progress>
+            </li>
+            <li class="info__stats-item">
+                <p>Special DEF</p>
+                <progress class="stats__specialDef" max="100" value="70"></progress>
+            </li>
+            <li class="info__stats-item">
+                <p>Speed</p>
+                <progress class="stats__speed" max="100" value="70"></progress>
+            </li>
+        </ul>
+      </div>
+    </div> 
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
-</body>
-
+  </body>
 </html>
