--- a/pokeProfile.html
+++ b/pokeProfile.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <title>Perfil Do Pokemon</title>
+
+    <!-- Font Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Font-Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,42 +19,25 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Font Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
-
-    <!-- Nosso CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/profile.css">
 </head>
-
 <body>
-    <main>
+    <main id="main">
         <nav>
             <ul>
-                <li><a href="https://github.com/CodedBytes" title="Meu Github"><i class="fa-brands fa-github-square fa-2x"></i></a></li>
+                <li><a href="/index.html" title="Voltar"><i class="fa fa-arrow-left fa-2x"></i></a></li>
                 <li>Pokedex</li>
             </ul>
         </nav><!-- Custom navbar. -->
-
-        <section class="content">
-            <ol id="pokemonList" class="pokemons">
-                <!-- ..... Pokemons here ..... -->
-            </ol>
-    
-            <div class="pagination">
-                <button id="loadMoreButton" type="button">
-                    Load More
-                </button>
-            </div>
-        </section>
+        
+        <!-- Pokemon info here -->
     </main>
 
-    <!-- Nosso JS -->
+    <!-- JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/pokeProfileRequest.js"></script>
 </body>
-
 </html>
