--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
+            <li class="pokemon">
+                <div class="detail">
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur">
+                </div>
+            </li>
         </ol>
 
         <div class="pagination">
