add: inicio implementacao pagina details

--- a/details.html
+++ b/details.html
@@ -31,16 +31,10 @@
             </div>
             <h1>Pokedex</h1>
         </header>
-        
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+        <main>
+            <h1>Teste Detalhes</h1>
+        </main>
 
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
     </section>
 
     <!-- Nosso JS -->
