Imagens no cabeçalho do projeto

--- a/index.html
+++ b/index.html
@@ -20,9 +20,18 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
 </head>
 
 <body>
+    <header>
+        <a href="#">
+            <img src="./assets/img/pokebola.png" alt="pokebola" class="logo">
+        </a>
+        <button id="botao-alterar-tema">
+            <img src="./assets/img/sun.png" alt="imagem do sol" class="imagem-botao">
+        </button>
+    </header>
     <section class="content">
         <h1>Pokedex</h1>
 
