--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <a href="#">
             <img src="./assets/img/pokebola.png" alt="pokebola" class="logo">
         </a>
+        <img class="logoPokemon" src="./assets/img/International_Pokémon_logo.svg-removebg-preview.png" alt="Logo Pokemon">
         <button id="botao-alterar-tema">
             <img src="./assets/img/sun.png" alt="imagem do sol" class="imagem-botao">
         </button>
     </header>
     <section class="content">
-        <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
