feat: adição da página de detalhes / infinity scroll

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Pokedex</title>
 
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,22 +22,23 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
-
+        <a href="#" role="button" class="btnTop hide" id="btnTop" title="Topo"></a>
+        <div class="top-bar">
+            <h1>Pokedex</h1>
+            <form id="search">
+                <input type="search" name="pokemon" id="searchPokemon" placeholder="Name or Number">
+                <button type="submit">🔍</button>
+            </form>
+        </div>
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
-
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
-        </div>
     </section>
 
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/utils.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 
