--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/modal.css">
+
+       <!-- Bootstrap -->
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-
 </head>
 
 <body>
@@ -37,7 +41,14 @@
         </div>
     </section>
 
+        <!-- Modal -->
+    <button type="button" id="btnModal" class="collapse" data-bs-toggle="modal" data-bs-target="#modalShowDatail"></button>
+    <div class="modal fade" id="modalShowDatail" tabindex="-1" aria-labelledby="modalShowDatailLabel" aria-hidden="true">
+
+    </div>
+
     <!-- Nosso JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
