--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/modal.css">
 </head>
 
 <body>
@@ -36,11 +37,12 @@
             </button>
         </div>
     </section>
-
+    <div id="mascara"></div>
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pokemon-model.js" defer></script>
+    <script src="/assets/js/poke-api.js" defer></script>
+    <script src="/assets/js/main.js" defer></script>
+    <script src="/assets/js/modal.js" defer></script>
 </body>
 
 </html>
