--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
-    <link rel="stylesheet" href="/assets/css/modal.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/modal.css">
 </head>
 
 <body>
@@ -37,12 +37,19 @@
             </button>
         </div>
     </section>
-    <div id="mascara"></div>
+
+    <!-- Modal -->
+    <button type="button" id="btnModal" class="collapse" data-bs-toggle="modal" data-bs-target="#modalShowDetail"></button>
+    <div class="modal fade" id="modalShowDetail" tabindex="-1" aria-labelledby="modalShowDatailLabel" aria-hidden="true">
+        
+    </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js" defer></script>
-    <script src="/assets/js/poke-api.js" defer></script>
-    <script src="/assets/js/main.js" defer></script>
-    <script src="/assets/js/modal.js" defer></script>
+    <script src="./assets/js/pokemon-model.js"></script>
+    <script src="./assets/js/poke-api.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
