--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
             </button>
         </div>
     </section>
-
+    <!-- Modal Structure -->
+    <div id="pokemonModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="modalBody"></div>
+        </div>
+    </div>
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
