--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <img class="foto-cabecalho" src="photo/pok-abrindo-pngwing.com.png">
+        <h1>Pokédex</h1>
+
+        <ol id="pokemonList" class="pokemons">
+            <!-- ..... Pokemons here ..... -->
+        </ol>
 
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
