Adding pokemon details modal

--- a/index.html
+++ b/index.html
@@ -54,6 +54,35 @@
             </div>
         </section>
 
+        <!-- Modal pokemon details -->
+        <div
+            class="modal fade"
+            id="pokemon-detail"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby=""
+            aria-hidden="true"
+        >
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="pokemon-detail-name">
+                            Nome
+                        </h5>
+                        <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            aria-label="Close"
+                        >
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body"></div>
+                </div>
+            </div>
+        </div>
+
         <!-- Bootstrap JS and jQuery -->
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
