--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body"></div>
+                    <div class="modal-body" id="pokemon-info"></div>
                 </div>
             </div>
         </div>
