--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <script src="./script/model/pokemon.js"></script>
     <script src="./script/poke-api.js"></script>
     <script src="./script/main.js"></script>
+    <script src="./script/render/pokemon-card.js"></script>
   </body>
 </html>
