refactor: move pokedex state logic to separate class

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="./script/model/pokemon.js"></script>
     <script src="./script/poke-api.js"></script>
     <script src="./script/render/pokemon-card.js"></script>
+    <script src="./script/pokedex.js"></script>
     <script src="./script/main.js"></script>
   </body>
 </html>
