Set theme to dark

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
 
-    <!-- Normalize CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -15,7 +14,6 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- Font Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +21,6 @@
       rel="stylesheet"
     />
 
-    <!-- Nosso CSS -->
     <link rel="stylesheet" href="/style/global.css" />
     <link rel="stylesheet" href="/style/pokedex.css" />
   </head>
@@ -31,6 +28,7 @@
   <body>
     <section class="content">
       <h1>Pokedex</h1>
+      <span class="author">By Gabriel Brandão</span>
 
       <ol id="pokemonList" class="pokemons">
         <!-- ..... Pokemons here ..... -->
@@ -41,7 +39,6 @@
       </div>
     </section>
 
-    <!-- Nosso JS -->
     <script src="./script/model/pokemon.js"></script>
     <script src="./script/poke-api.js"></script>
     <script src="./script/render/pokemon-card.js"></script>
