--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
-
+        <h1 class="titlePokemon">Pokedex</h1>
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
