feat: add pré-fetch loading and trigger to infinite loading

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/loading.css">
 </head>
 
 <body>
@@ -31,9 +32,8 @@
         </ol>
 
         <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
+            <div class="loader"></div>
+            <div id="trigger"></div>
         </div>
     </section>
 
