feat: add loadmore button for first pageview

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
         <div class="pagination">
             <div class="loader"></div>
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
             <div id="trigger"></div>
         </div>
     </section>
