--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/card.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
 </head>
 
@@ -29,7 +30,6 @@
         <ol id="pokemonList" class="pokemons">
             <!-- ..... Pokemons here ..... -->
         </ol>
-
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
