--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <div class="windows-pokemon">
+            <h1>Pokedex</h1>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+            <ol id="pokemonList" class="pokemons">
+                <!-- ..... Pokemons here ..... -->
+            </ol>
 
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
+            <div class="pagination">
+                <button id="loadMoreButton" type="button">
+                    Load More
+                </button>
+            </div>
         </div>
     </section>
 
