adicionando spinner ao clicar no botao load more

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             <!-- ..... Pokemons here ..... -->
         </ol>
 
-        <div class="pagination">
+        <div class="pagination" style="position: relative;">
             <button id="loadMoreButton" type="button">
                 Load More
+                <!-- Adicione o spinner como filho do botão -->
+                <div id="spinner" class="spinner"></div>
             </button>
         </div>
     </section>
