--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
     </section>
 
+    <div id="overlay" class="overlay"></div>
+    <div id="pokemonModal" class="pokemonModal"></div>
+
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
