Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <section class="content">
-        <h1>Pokédex</h1>
+        <h1>Pokédex - 1ª Geração</h1>
  
         <ol id="pokemonList" class="pokemons">
 
@@ -34,7 +34,7 @@
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Load More
+                Ver Mais
             </button>
         </div>
 
