--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
 
         <article>
-                <ol id="pokeList" class="pokemons">
+                <ol id="pokemonList" class="pokemons">
                 </ol>
                 <div class="pagination">
                     <button id="loadMoreButton" type="button">
@@ -48,7 +48,7 @@
             <p>Todos os direitos dos personagens são da <strong>The Pokémon Company</strong></p>
         </footer>
 
-        <script src="./assets/js/pokeModel.js"></script>
+        <script src="./assets/js/pokemon.js"></script>
         <script src="./assets/js/pokeapi.js"></script>
         <script src="./assets/js/pokeMain.js"></script>
     </body>
