--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <link rel="stylesheet" href="./assets/css/pokeColors.css">
         <link rel="stylesheet" href="./assets/css/pokeGlobal.css">
         <link rel="stylesheet" href="./assets/css/pokestyle.css">
+
+        <link rel="icon" href="./assets/css/pokeicon.png">
     </head>
 
     <body>
