--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
         
-        <link rel="stylesheet" href="./assets/css/pokeColors.css">
-        <link rel="stylesheet" href="./assets/css/pokeGlobal.css">
-        <link rel="stylesheet" href="./assets/css/pokestyle.css">
+        <link rel="stylesheet" href="assets/css/pokeColors.css">
+        <link rel="stylesheet" href="assets/css/pokeGlobal.css">
+        <link rel="stylesheet" href="assets/css/pokestyle.css">
 
-        <link rel="icon" href="./assets/css/pokeicon.png">
+        <link rel="icon" href="assets/css/pokeicon.png">
     </head>
 
     <body>
@@ -50,8 +50,8 @@
             <p>Todos os direitos dos personagens são da <strong>The Pokémon Company</strong></p>
         </footer>
 
-        <script src="./assets/js/pokemon.js"></script>
-        <script src="./assets/js/pokeapi.js"></script>
-        <script src="./assets/js/pokeMain.js"></script>
+        <script src="assets/js/pokemon.js"></script>
+        <script src="assets/js/pokeapi.js"></script>
+        <script src="assets/js/pokeMain.js"></script>
     </body>
 </html>
