Changes to make it look more like a GameBoy

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/pokeball.ico" />
-    <title>Pokedex</title>
+    <link rel="shortcut icon" href="./assets/img/pokeball.ico" />
+    <title>Pokédex</title>
 
     <!-- Normalize CSS -->
     <link
@@ -31,7 +31,7 @@
 
   <body>
     <section class="content">
-      <img src="./assets/logo.png" />
+      <img src="./assets/img/logo.png" />
 
       <ol id="pokemonList" class="pokemons">
         <!-- ..... Pokemons here ..... -->
