projeto front end pokedex com api

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <!-- ..... Pokemons here ..... -->
         </ol>
 
+        <div id="pokeDetail" class="detalhes" >
+            <div class="statusPokemos"> 
+                
+            </div>
+        </div>
+
         <div class="pagination">
             <button id="loadMoreButton" type="button">
                 Load More
@@ -41,6 +47,7 @@
     <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/detail.js"></script>
 </body>
 
 </html>
