Organizations change + desing

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     <script src="./src/js/pokemon-model.js"></script>
     <script src="./src/js/poke-api.js"></script>
     <script src="./src/js/main.js"></script>
+    <script src="./src/js/pokeId.js"></script>
   </body>
 </html>
