feat- add details page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/pokedexDetails.css">
 </head>
 
 <body>
